tests/ui/lint/snapshots/redundant_pattern_matching_result_is_ok.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant pattern matching
   ╭─[test.lis:4:11]
 3 │   let r: Result<int, string> = Ok(1)
 4 │   let _ = match r {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     Ok(_) => true,
   ╰────
  help: Replace this `match` with `.is_ok()` · code: [lint.redundant_pattern_matching]
