tests/ui/lint/snapshots/redundant_pattern_matching_reversed_arms.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant pattern matching
   ╭─[test.lis:4:11]
 3 │   let o: Option<int> = Some(1)
 4 │   let _ = match o {
   ·           ──┬──
   ·             ╰── can be simpler
 5 │     None => false,
   ╰────
  help: Replace this `match` with `.is_some()` · code: [lint.redundant_pattern_matching]
