tests/ui/lint/snapshots/redundant_rebinding_parameter.snap
---
source: tests/ui/lint/mod.rs
---
  ● Redundant rebinding
   ╭─[test.lis:3:3]
 2 │ pub fn f(a: int) {
 3 │   let a = a;
   ·   ────┬────
   ·       ╰── rebinds `a` to itself
 4 │   let _ = a
   ╰────
  help: Remove `let a = a`. The existing `a` already refers to this value, so rebinding it does nothing · code: [lint.redundant_rebinding]
